// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox matches snapshot: enzyme.mount 1`] = `
<Checkbox
  input={Object {}}
>
  <glamorous(label)>
    <label
      className="css-xzhrfi multiple-choice"
    >
      <glamorous(input)
        type="checkbox"
      >
        <input
          className="css-10svazo"
          type="checkbox"
        />
      </glamorous(input)>
      <glamorous(span)>
        <span
          className="css-j94lrm"
        >
          example
        </span>
      </glamorous(span)>
    </label>
  </glamorous(label)>
</Checkbox>
`;

exports[`Checkbox matches snapshot: enzyme.render 1`] = `
<label
  class="css-xzhrfi multiple-choice"
>
  <input
    class="css-10svazo"
    type="checkbox"
  />
  <span
    class="css-j94lrm"
  >
    example
  </span>
</label>
`;

exports[`Checkbox matches snapshot: enzyme.shallow 1`] = `
<glamorous(label)>
  <glamorous(input)
    type="checkbox"
  />
  <glamorous(span)>
    example
  </glamorous(span)>
</glamorous(label)>
`;
